jwt terminado + middleware casero